# prerender-python-starlette

./: 404.html  LICENSE  Makefile  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: build.yml
prerender_python_starlette/: __init__.py  middleware.py
search/: search_index.json
tests/: test_middleware.py  test_prerender_python_starlette.py
