[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "prerender_python_starlette"
dist-name = "prerender-python-starlette"
author = "François Voron"
author-email = "fvoron@gmail.com"
home-page = "https://github.com/BeeMyDesk/prerender-python-starlette"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
]
description-file = "README.md"
requires-python = ">=3.7"
requires = [
]

[tool.flit.metadata.requires-extra]

[tool.flit.metadata.urls]
Documentation = "https://BeeMyDesk.github.io/prerender-python-starlette/"
